--- a/club.html
+++ b/club.html
@@ -14,7 +14,7 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="club.css" />
     <title>AMIMUN'22 | Home</title>
   </head>
   <body>
@@ -110,230 +110,156 @@
 
       <div class="header-section">
         <h2 class="header theme">
-          Amity International Model United Nations<br />
+          Amity International Model United Nations Club<br />
         </h2>
         <div class="content">
-          <h3 class="header-text header-sec">
-            The second e-edition of Amity International Model United Nations
-            shall be a simulation of the United Nations, spanning two days. At
-            AMIMUN, delegates gain a better understanding of the inner workings
-            of the UN, engage in diplomatic discussion, and enhance their
-            knowledge of global relations. The past ten editions of AMIMUN have
-            each continued to set the bar higher in terms of innovative themes
-            and constructive debate; with this conference continuing the
-            tradition. The second e-edition of AMIMUN shall endeavour to
-            construct a space within which delegates will develop a more
-            holistic consciousness of the world around them, and enhance
-            critical thinking, public speaking, and leadership skills. Thus,
-            AMIMUN abides by the Preamble to the Charter of the United Nations:
-            “To practice tolerance and live together in peace with one another
-            as good neighbours”.
-          </h3>
-        </div>
-      </div>
-
-      <div class="smooth-scroll-wrapper">
-        <div class="content">
-          <h1 class="text">Absolute Commitment</h1>
-          <div class="img">
-            <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
-          </div>
-          <p class="justified-content">
-            The Secretariat of Amity International Model United Nations
-            Conference consists of people who have consistently proven
-            themselves as hardworking, committed, and knowledgeable. Each person
-            is selected ensuring, AMIMUN's ideals are upheld and executed with
-            the utmost dedication. The secretariat ensures the smooth running of
-            all the committees while maintaining the highest level of
-            hospitality. Thus, we remain committed to the promise of quality and
-            guarantee an enriching experience.
-          </p>
-        </div>
-
-        <div class="content">
-          <h1 class="text">International Platform</h1>
-          <div class="img">
-            <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
-          </div>
-          <p class="justified-content">
-            Amity University takes the honour of being an institute where
-            several people from various backgrounds interact and work with one
-            another. AMIMUN staying on the same ideal has created an
-            international platform, where ideas, opinions, and views are
-            propagated. The same is promoted by the participation of
-            international delegates and past collaborations with organizations
-            such as the United Nations Information Centre for India and Bhutan,
-            Amnesty International, and Doctors Without Borders, to effectively
-            impart the knowledge of global affairs, diplomacy, and international
-            policy to the students and to add authenticity to the experience.
-          </p>
-        </div>
-
-        <div class="content">
-          <h1 class="text">Creativity & Innovation</h1>
-          <div class="img">
-            <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
-          </div>
-          <p class="justified-content">
-            Amity University strives to promote creativity in terms of
-            education. We believe in the overall development of students through
-            participation in various disciplines and activities.
-          </p>
-        </div>
-
-        <div class="content">
-          <h1 class="text">Brush Up Ingenuity</h1>
-          <div class="img">
-            <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
-          </div>
-          <p class="justified-content">
-            AMIMUN has successfully created a platform where delegates have had
-            the option to master and refine their strategic abilities. The
-            E-edition AMIMUN will encourage the manner of thinking to create
-            solutions for some grave world issues.
-          </p>
-        </div>
-
-        <div class="content">
-          <h1 class="text">Engaging & Paramount Motions</h1>
-          <div class="img">
-            <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
-          </div>
-          <p class="justified-content">
-            The AMIMUN fraternity brings forth the most engaging motions aimed
-            to facilitate the highest quality of debate. Deliberation on
-            challenging global issues will sharpen the members with the
-            learnings of the United Nations and assist them with understanding
-            the current world request.
+          <p class="header-text header-sec">
+            We are the Amity University MUN Club, a collection of determined
+            students interested in diplomacy and the field of international
+            relations. We are pleased to represent the Amity International Model
+            United Nations (AMIMUN) conference, one of the largest MUNs in
+            Delhi, which is hosted and organised by Amity University. We train
+            rigorously to continuously grow through our experiences, bettering
+            our discussions, and broadening our perspectives. We endeavour to
+            encourage each member of this club to spare no effort and
+            encapsulate the basic values of the United Nations. Due to this, we
+            have a wealth of practical experience and are always led by seasoned
+            MUNers. The talent exists, and the future is clear: We wish to
+            continue our MUN journey by welcoming others and putting faith in
+            our fellow young student diplomats.
           </p>
         </div>
       </div>
     </div>
 
-    <hr />
+    <h2 class="header">Message from President</h2>
+    <div class="section">
+      <div class="img-text-container">
+        <div id="sec-gen-img"></div>
+        <p>
+          <b>Zeeshan Ahmad Fareed</b><br />
+          President<br />
+          AMIMUN Club 2022
+        </p>
+      </div>
+      <div class="message">
+        <p id="sec-gen-msg">
+          Dear Delegates, Welcome to the Amity International Model United
+          Nations Club, a platform where you can speak your mind, albeit
+          respectfully. The aim is not to create just a space for MUNers but to
+          create an experience for each member that will leave you a better
+          version of yourself. We often think diplomacy and public speaking are
+          phenomena that are separated from us, but in reality, they are
+          integral to our daily lives.<br />
 
-    <div class="header-section">
-      <h2 class="header theme">
-        Amity University
-        <br />
-      </h2>
-      <div class="content">
-        <p class="header-text header-sec">
-          <b>Our Vision</b> is to build the country by fortifying the general
-          public through providing collective, collaborative, teaching; so as to
-          be the worldwide leader in skill training and embodying our promise to
-          be the university where Modernity Blends with Tradition.<br />
+          As an avid debater, I understand that the need to discuss important
+          issues and convince others is human nature. To nurture this very human
+          instinct we present to you the Amity International Model United
+          Nations Club, wherein one should be ready for an unprecedented level
+          of debate and learning.<br />
 
-          <b>Our Mission</b> is to provide education, catering to all levels
-          across the ever-evolving sphere of modern events, developing frontier
-          areas of knowledge, learning, research and examination; building up
-          the general character of students. We not only create great experts
-          but well-rounded individuals. Our students understand and have respect
-          for human qualities, pride in their legacy and culture, can discern
-          what is right, and imbibe attributes of courage, conviction and of
-          action.
+          <br />
+        </p>
+        <p id="sec-gen-regards">
+          Stay safe and happy debating!<br />
+          Zeeshan Ahmad Fareed<br />
         </p>
       </div>
     </div>
 
-    <div class="smooth-scroll-wrapper">
-      <div class="content">
-        <h1 class="text">Academic Excellence</h1>
-        <div class="img">
-          <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
-        </div>
-        <p class="justified-content">
-          Amity University strives for the uncompromising quality and highest
-          standard of excellence in teaching, learning, research, and
-          scholarship across various disciplines.
-        </p>
-      </div>
+    <h2 class="header">Message from Vice President</h2>
 
-      <div class="content">
-        <h1 class="text">Integrity & Ethics</h1>
-        <div class="img">
-          <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
-        </div>
-        <p class="justified-content">
-          Amity University upholds the highest ethical values, integrity and
-          professionalism, and an unwavering commitment to academic freedom,
-          transparency, and accountability.
+    <div class="section">
+      <div class="img-text-container">
+        <div id="sec-gen-img"></div>
+        <p>
+          <b>Rohan Nagpal</b><br />
+          Vice President<br />
+          AMIMUN Club 2022
         </p>
       </div>
+      <div class="message">
+        <p id="sec-gen-msg">
+          Welcome to Amity International Model United Nations Club! Cognizant of
+          the Amity vision towards holistic and overall development, the AMIMUN
+          Club is part of the continuous effort to accomplish this goal. We seek
+          to produce leaders of the highest order, by means of engaging them
+          with MUNs as a tool for self-development.<br />
 
-      <div class="content">
-        <h1 class="text">Diversity & Mutual Respect</h1>
-        <div class="img">
-          <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
-        </div>
-        <p class="justified-content">
-          Amity University nurtures an environment of safety, trust & mutual
-          respect and embeds equality & diversity in its Strategy by ensuring
-          that the strategic plans are fair and inclusive.
+          MUNs over the past decade has managed to transform into mainstream
+          extra-curricular activity. The primary reason behind this widespread
+          acceptance is the amount of rigour involved; as MUNs are not only
+          verbal debates but a clash of core ideas and their application to the
+          real world. The AMIMUN Club takes up the initiative to promote the
+          culture of MUNing within the confines of Amity University, by actively
+          engaging students via means of Training Sessions and Intra-MUNs alike.
+          Possessing one of the largest student member bodies, the AMIMUN Club
+          has grown leaps and bounds since its inception in 2012. Not only is
+          this stellar growth a sign of MUNs being accepted widely among the
+          student body, but also of a successful effort to enrich student minds
+          by imbibing the values of MUNs into the student population. We, at the
+          AMIMUN club, will continue to strive towards perfection and are proud
+          to be at the forefront of this mission.<br />
+        </p>
+        <p id="sec-gen-regards">
+          Regards,<br />
+          Rohan Nagpal<br />
         </p>
       </div>
+    </div>
 
-      <div class="content">
-        <h1 class="text">Expanding Horizons of Knowledge</h1>
-        <div class="img">
-          <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
-        </div>
-        <p class="justified-content">
-          Amity University is driven by research and innovation and ensures
-          continuous engagement in scholarly activities when in pursuit of
-          change, creativity, and excellence.
+    <h2 class="header">Message from Vice President</h2>
+    <div class="section">
+      <div class="img-text-container">
+        <div id="sec-gen-img"></div>
+        <p>
+          <b>Shubhangi Thakur </b><br />
+          Vice President<br />
+          AMIMUN Club 2022
         </p>
       </div>
+      <div class="message">
+        <p id="sec-gen-msg">
+          Greetings,<br />
 
-      <div class="content">
-        <h1 class="text">Shared Governance</h1>
-        <div class="img">
-          <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
-        </div>
-        <p class="justified-content">
-          Amity University encourages shared decision-making through a process
-          that rests upon collaborative consultation, open flow of information,
-          diverse involvement, and collective deliberations of all stakeholders.
-        </p>
-      </div>
+          As Amity University's renowned official Model UN club, we take pride
+          in spreading the Model UN discipline among the students of our
+          university's various institutions. Over the past few years, AMIMUN has
+          been responsible for encouraging and preparing outstanding young
+          MUNers, and they have consequently garnered accolades and recognition
+          not only as delegates but also as Executive Board members to multiple
+          Conferences.<br />
 
-      <div class="content">
-        <h1 class="text">Social Responsibility</h1>
-        <div class="img">
-          <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
-        </div>
-        <p class="justified-content">
-          Amity University creates and nurtures an inclusive environment where
-          everyone can develop to their full potential and contribute to the
-          interest of society as a whole.
-        </p>
-      </div>
+          We believe in guiding and mentoring our fellow students and peers in
+          the Art of MUNing at the AMIMUN Club. This is the essence of AMIMUN
+          Club. We strive to be the best in order to give the best platforms and
+          opportunities for every individual who wishes to strive forth
+          alongside us. AMIMUN Club is the largest student body at Amity, Noida,
+          and we are very proud of all of our members and what they have
+          accomplished over the years. We help you build your own perspective on
+          global tragedy, which helps you become a better debater and global
+          leader with long-term objectives. These are arguments about real
+          issues that affect real people, this is actual information; and this
+          is what we do. With a deep belief in the United Nations' principles,
+          we want to continue on this path of progress and ambition.<br />
 
-      <div class="content">
-        <h1 class="text">Environmental Responsibility</h1>
-        <div class="img">
-          <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
-        </div>
-        <p class="justified-content">
-          Amity University is acutely aware of its environmental
-          responsibilities and embraces principle of sustainable development to
-          ensure that any adverse environmental impact of its activities is
-          minimized.
+          <br />
+        </p>
+        <p id="sec-gen-regards">
+          Regards,<br />
+          Shubhangi Thakur<br />
         </p>
       </div>
-
-      <div class="content">
-        <h1 class="text">Service</h1>
-        <div class="img">
-          <img src="https://www.amity.edu/AMIMUN/static/img-2.JPG" alt="" />
-        </div>
-        <p class="justified-content">
-          Amity University seeks to serve the diverse, personal and professional
-          development needs of its constituents and encourage the habit of
-          engagement, caring, and civic responsibility by emphasizing a
-          connection between service, excellence, and career growth.
-        </p>
-      </div>
+    </div>
+    <div class="form-btn">
+      <h2>Join AMIMUN Club Now!</h2>
+      <button
+        id="form-btn"
+        data-tf-popup="qnu4WLmq"
+      >
+        Apply
+      </button>
+      <script src="//embed.typeform.com/next/embed.js"></script>
     </div>
     <hr />
     <footer id="bottom">
