--- a/forms/delegate.html
+++ b/forms/delegate.html
@@ -80,20 +80,20 @@
               <div class="sub-menu-1">
                 <ul>
                   <li>
-                    <a href="./resources/country-matrix.html">Country Matrix</a>
+                    <a href="../resources/country-matrix.html">Country Matrix</a>
                   </li>
                   <li>
-                    <a href="./resources/background-guides.html"
+                    <a href="../resources/background-guides.html"
                       >Background Guides</a
                     >
                   </li>
                   <li>
-                    <a href="./resources/awards-criteria.html"
+                    <a href="../resources/awards-criteria.html"
                       >Awards Criteria</a
                     >
                   </li>
                   <li>
-                    <a href="./resources/conference-schedule.html">
+                    <a href="../resources/conference-schedule.html">
                       Conference Schedule</a
                     >
                   </li>
