--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               </div>
             </li>
             <li>Gallery</li>
-            <li>AMIMUN Club</li>
+            <li><a href="./club.html">AMIMUN Club</a></li>
             <li>
               <a href="./resources.html">Resources</a>
               <i class="fas fa-chevron-down"></i>
@@ -121,9 +121,8 @@
       <div class="responsive-quote">
         <h1 class="responsive-center-text">
           <i>
-            <span style="font-size: 20px">"</span>Perseverance doesn't always
-            mean winning and losing. Perseverance means showing up and rising to
-            the occasion and performing.</i
+            "Perseverance doesn't always mean winning and losing. Perseverance
+            means showing up and rising to the occasion and performing."</i
           ><br />
         </h1>
         <h3 class="responsive-quote-teller">&mdash; Michael Chiesa</h3>
@@ -141,9 +140,9 @@
           <div class="videoplayer-center-text">
             <h1 class="center-text">
               <i>
-                <span style="font-size: 80px">"</span>Perseverance doesn't
-                always mean winning and losing. Perseverance means showing up
-                and rising to the occasion and performing.</i
+                "Perseverance doesn't always mean winning and losing.
+                Perseverance means showing up and rising to the occasion and
+                performing."</i
               ><br />
             </h1>
             <h3 class="quote">&mdash; Michael Chiesa</h3>
@@ -165,7 +164,7 @@
         </div>
         <div id="six" class="imgcontainer"></div>
       </div>
-      <h2 class="heading">Message from Secretary General</h2>
+      <h2 class="heading theme">Message from Secretary General</h2>
       <div class="section">
         <div class="img-text-container">
           <div id="sec-gen-img"></div>
@@ -221,7 +220,7 @@
       </div>
 
       <div class="section-sponsors">
-        <h2 class="heading">Our Sponsors</h2>
+        <h2 class="heading theme">Our Sponsors</h2>
         <h3 class="comming-soon">Coming Soon</h3>
         <!-- <div class="cursor"></div> -->
         <!-- <div class="wrapper">
@@ -251,7 +250,7 @@
       </div>
 
       <div class="section-sponsors">
-        <h2 class="heading">Our Collaborators</h2>
+        <h2 class="heading theme">Our Collaborators</h2>
         <h3 class="comming-soon">Coming Soon</h3>
         <!-- <div class="cursor"></div>
         <div class="wrapper">
