--- a/resources/awards-criteria.html
+++ b/resources/awards-criteria.html
@@ -28,16 +28,16 @@
               <div class="sub-menu-1">
                 <ul>
                   <li>
-                    <a href="./guiding-light.html">Our Guiding Light</a>
+                    <a href="../guiding-light.html">Our Guiding Light</a>
                   </li>
                   <li>
-                    <a href="./advisory-board.html">Advisory Board</a>
+                    <a href="../advisory-board.html">Advisory Board</a>
                   </li>
                   <li>
-                    <a href="./secretariate.html">Secretariat</a>
+                    <a href="../secretariate.html">Secretariat</a>
                   </li>
                   <li>
-                    <a href="./org-committee.html">Organising Committee</a>
+                    <a href="../org-committee.html">Organising Committee</a>
                   </li>
                 </ul>
               </div>
@@ -76,20 +76,20 @@
               <div class="sub-menu-1">
                 <ul>
                   <li>
-                    <a href="./resources/country-matrix.html">Country Matrix</a>
+                    <a href="../resources/country-matrix.html">Country Matrix</a>
                   </li>
                   <li>
-                    <a href="./resources/background-guides.html"
+                    <a href="../resources/background-guides.html"
                       >Background Guides</a
                     >
                   </li>
                   <li>
-                    <a href="./resources/awards-criteria.html"
+                    <a href="../resources/awards-criteria.html"
                       >Awards Criteria</a
                     >
                   </li>
                   <li>
-                    <a href="./resources/conference-schedule.html">
+                    <a href="../resources/conference-schedule.html">
                       Conference Schedule</a
                     >
                   </li>
