added photos to club.html

--- a/about.html
+++ b/about.html
@@ -477,7 +477,7 @@
       // smoothScroll();
 
       $(function () {
-        var elements = $(".text, .img").toArray();
+        var elements = $(".text, .img, .justified-content").toArray();
         $(window).scroll(function () {
           elements.forEach(function (item) {
             if ($(this).scrollTop() >= $(item).offset().top - 600) {
@@ -485,11 +485,11 @@
             }
           });
         });
-        elements.forEach(function (item) {
-          if ($(this).scrollTop() >= $(item).offset().top - 600) {
-            $(item).addClass("reveal");
-          }
-        });
+        // elements.forEach(function (item) {
+        //   if ($(this).scrollTop() >= $(item).offset().top - 600) {
+        //     $(item).addClass("reveal");
+        //   }
+        // });
       });
     </script>
     <script
