--- a/club.html
+++ b/club.html
@@ -132,50 +132,103 @@
       </div>
     </div>
 
-    <h2 class="header">Message from President</h2>
+    <h2 class="header">Message from the President</h2>
     <div class="section">
       <div class="img-text-container">
-        <div id="sec-gen-img"></div>
+        <div id="sec-img-1"></div>
         <p>
           <b>Zeeshan Ahmad Fareed</b><br />
           President<br />
-          AMIMUN Club 2022
+          AMIMUN Club 2021-22
         </p>
       </div>
       <div class="message">
         <p id="sec-gen-msg">
-          Dear Delegates, Welcome to the Amity International Model United
-          Nations Club, a platform where you can speak your mind, albeit
-          respectfully. The aim is not to create just a space for MUNers but to
-          create an experience for each member that will leave you a better
-          version of yourself. We often think diplomacy and public speaking are
+          Amity International Model United Nations (AMIMUN) Club encapsulates
+          what Amity University Uttar Pradesh stands for: the growth and
+          development of our student community and nurturing the leaders of
+          tomorrow. One might learn a great deal within classrooms but the
+          ability to articulate and implement your thoughts is something that
+          AMIMUN gives you. <br />
+
+          We are a fraternity that helps each member in every aspect of their
+          journey in the world of debate and diplomacy. With over five hundred
+          highly motivated members, we are here to change the way diplomacy and
+          debate are looked at. We often think diplomacy and public speaking are
           phenomena that are separated from us, but in reality, they are
-          integral to our daily lives.<br />
+          integral to our daily lives and human civilization. <br />
+
+          In today’s testing times mired with conflicts we need the next
+          generation to focus on resolving these conflicts and focusing on
+          making this world more sustainable, cooperative, and compassionate.
+          Our existence as a species is a mosaic of our individual being, if we
+          can change ourselves then we can bring about unprecedented change in
+          our society. <br />
 
           As an avid debater, I understand that the need to discuss important
-          issues and convince others is human nature. To nurture this very human
-          instinct we present to you the Amity International Model United
-          Nations Club, wherein one should be ready for an unprecedented level
-          of debate and learning.<br />
-
-          <br />
+          issues and convincing others is human nature. To nurture this very
+          human instinct we present to you the Amity International Model United
+          Nations Club, wherein one should be ready for an unparalleled level of
+          debate and learning.<br />
         </p>
         <p id="sec-gen-regards">
-          Stay safe and happy debating!<br />
+          Warm Regards,<br />
           Zeeshan Ahmad Fareed<br />
         </p>
       </div>
     </div>
 
-    <h2 class="header">Message from Vice President</h2>
+    <h2 class="header">Message from the Vice Presidents</h2>
 
     <div class="section">
       <div class="img-text-container">
-        <div id="sec-gen-img"></div>
+        <div id="sec-img-2"></div>
+        <p>
+          <b>Shubhangi Thakur </b><br />
+          Vice President<br />
+          AMIMUN Club 2021-22
+        </p>
+      </div>
+      <div class="message">
+        <p id="sec-gen-msg">
+          Greetings,<br />
+
+          As Amity University's renowned official Model UN club, we take pride
+          in spreading the Model UN discipline among the students of our
+          university's various institutions. Over the past few years, AMIMUN has
+          been responsible for encouraging and preparing outstanding young
+          MUNers, and they have consequently garnered accolades and recognition
+          not only as delegates but also as Executive Board members to multiple
+          Conferences.<br />
+
+          We believe in guiding and mentoring our fellow students and peers in
+          the Art of MUNing at the Club. This is the essence of AMIMUN
+          Club. We strive to be the best in order to give the best platforms and
+          opportunities for every individual who wishes to strive forth
+          alongside us. AMIMUN Club is the largest student body at Amity, Noida,
+          and we are very proud of all of our members and what they have
+          accomplished over the years. We help you build your own perspective on
+          global tragedy, which helps you become a better debater and global
+          leader with long-term objectives. These are arguments about real
+          issues that affect real people, this is actual information; and this
+          is what we do. With a deep belief in the United Nations' principles,
+          we want to continue on this path of progress and ambition.<br />
+          <br />
+        </p>
+        <p id="sec-gen-regards">
+          Warm Regards,<br />
+          Shubhangi Thakur<br />
+        </p>
+      </div>
+    </div>
+
+    <div class="section">
+      <div class="img-text-container">
+        <div id="sec-img-3"></div>
         <p>
           <b>Rohan Nagpal</b><br />
           Vice President<br />
-          AMIMUN Club 2022
+          AMIMUN Club 2021-22
         </p>
       </div>
       <div class="message">
@@ -201,64 +254,50 @@
           AMIMUN club, will continue to strive towards perfection and are proud
           to be at the forefront of this mission.<br />
         </p>
+        <br />
+        <br />
         <p id="sec-gen-regards">
-          Regards,<br />
+          Warm Regards,<br />
           Rohan Nagpal<br />
         </p>
       </div>
     </div>
 
-    <h2 class="header">Message from Vice President</h2>
-    <div class="section">
-      <div class="img-text-container">
-        <div id="sec-gen-img"></div>
-        <p>
-          <b>Shubhangi Thakur </b><br />
-          Vice President<br />
-          AMIMUN Club 2022
-        </p>
-      </div>
-      <div class="message">
-        <p id="sec-gen-msg">
-          Greetings,<br />
+    <h2 class="header">Member Secretaries</h2>
+    <div class="section-col">
+      <div class="section-3-cols">
+        <div class="img-text-container">
+          <div id="sec-img-4"></div>
+          <p>
+            <b>Zeba Hussain</b><br />
+            Member Secretary<br />
+            AMIMUN Club 2021-22
+          </p>
+        </div>
 
-          As Amity University's renowned official Model UN club, we take pride
-          in spreading the Model UN discipline among the students of our
-          university's various institutions. Over the past few years, AMIMUN has
-          been responsible for encouraging and preparing outstanding young
-          MUNers, and they have consequently garnered accolades and recognition
-          not only as delegates but also as Executive Board members to multiple
-          Conferences.<br />
+        <div class="img-text-container">
+          <div id="sec-img-5"></div>
+          <p>
+            <b>Chirag Sharma</b><br />
+            Member Secretary<br />
+            AMIMUN Club 2021-22
+          </p>
+        </div>
 
-          We believe in guiding and mentoring our fellow students and peers in
-          the Art of MUNing at the AMIMUN Club. This is the essence of AMIMUN
-          Club. We strive to be the best in order to give the best platforms and
-          opportunities for every individual who wishes to strive forth
-          alongside us. AMIMUN Club is the largest student body at Amity, Noida,
-          and we are very proud of all of our members and what they have
-          accomplished over the years. We help you build your own perspective on
-          global tragedy, which helps you become a better debater and global
-          leader with long-term objectives. These are arguments about real
-          issues that affect real people, this is actual information; and this
-          is what we do. With a deep belief in the United Nations' principles,
-          we want to continue on this path of progress and ambition.<br />
-
-          <br />
-        </p>
-        <p id="sec-gen-regards">
-          Regards,<br />
-          Shubhangi Thakur<br />
-        </p>
+        <!-- <div class="img-text-container">
+          <div id="sec-gen-img"></div>
+          <p>
+            <b>Rohan Nagpal</b><br />
+            Vice President<br />
+            AMIMUN Club 2021-22
+          </p>
+        </div> -->
       </div>
     </div>
+
     <div class="form-btn">
       <h2>Join AMIMUN Club Now!</h2>
-      <button
-        id="form-btn"
-        data-tf-popup="qnu4WLmq"
-      >
-        Apply
-      </button>
+      <button id="form-btn" data-tf-popup="XEmZfQFz">Apply</button>
       <script src="//embed.typeform.com/next/embed.js"></script>
     </div>
     <hr />
