added submit btn to forms

--- a/forms/delegate.html
+++ b/forms/delegate.html
@@ -115,41 +115,41 @@
         <div class="name">
           <div class="first-name">
             <label for="">First Name</label>
-            <input name="first-name" type="text" />
+            <input placeholder="Severus" name="first-name" type="text" />
           </div>
 
           <div class="last-name">
             <label for="">Last Name</label>
-            <input name="last-name" type="text" />
+            <input placeholder="Snape" name="last-name" type="text" />
           </div>
         </div>
 
         <label for="">Phone</label>
-        <input name="phone" type="number" />
+        <input placeholder="888-888-8888" name="phone" type="number" />
 
         <label for="">Email</label>
-        <input name="email" type="email" />
+        <input placeholder="severus.snape@hogwards.com" name="email" type="email" />
 
         <label for="">College/Institute Name</label>
-        <input name="college" type="text" />
+        <input placeholder="Slytherin" name="college" type="text" />
 
         <label for="">University Name</label>
-        <input name="university" type="text" />
+        <input placeholder="Hogwards" name="university" type="text" />
 
         <label for="">Academic Year</label>
-        <input name="year" type="number" />
+        <input placeholder="4" name="year" type="number" />
 
         <label for="">Country</label>
-        <input name="university" type="text" />
+        <input placeholder="United Kingdom" name="university" type="text" />
 
         <label for="">State</label>
-        <input name="university" type="text" />
+        <input placeholder="England" name="university" type="text" />
 
         <label for="">City</label>
-        <input name="university" type="text" />
+        <input placeholder="Leavesden" name="university" type="text" />
 
         <label for="">ZIP</label>
-        <input name="university" type="text" />
+        <input placeholder="9¾" name="university" type="text" />
 
         <hr />
 
@@ -235,6 +235,7 @@
         >
         <label for="confirm">I Agree </label>
         <input type="checkbox" name="confirm" id="" />
+        <a href="#" class="submit-btn">Submit</a>
       </form>
     </div>
     <hr />
