--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="back">
       <p class="banner">
         Registration for AMIMUN 2022 has opened.
-        <a href="#"> <u>Register now</u> </a> !
+        <a href="./forms/delegate.html"> <u>Register now</u> </a> !
       </p>
       <nav>
         <div class="menu-bar">
@@ -147,7 +147,7 @@
             </h1>
             <h3 class="quote">&mdash; Michael Chiesa</h3>
             <p id="timer"></p>
-            <div class="btn">REGISTER</div>
+            <a href="./forms/delegate.html" class="btn">REGISTER</a>
           </div>
           <video
             id="vid"
